# SmallMobileRobot

./: .gitignore  LICENSE  README.md  motor_control.py  motor_test.py  pyproject.toml  requirements.in  requirements.txt  sensors.py
HardwareTests/: camera_test_photo.py
config/: basic_car_us_lt.yaml  test_config.yaml
scripts/: main.py  motor_control.py
scripts/deprecated/: motor_control.py
scripts/hardware_tests/: camera_movement_test.py  camera_test_video.py  motor_test.py
scripts/testing/: camera_test.py  image_processing_test.py
scripts/tests/: camera_test.py
src/robot/control/: four_wheel_car_control.py
src/robot/hardware/: cameras.py  motors.py  pan_tilt_unit.py  sensors.py
src/robot/robots/: base.py  basic_car.py  basic_car_us_lt.py  registry.py
src/robot/utils/: config.py  launcher.py
